--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ body {
 }
 
 #showcase {
-  background-image: url("https://tesla-cdn.thron.com/delivery/public/image/tesla/c82315a6-ac99-464a-a753-c26bc0fb647d/bvlatuR/std/1200x628/lhd-model-3-social");
+  background-image: url("https://www.tesla.com/sites/default/files/modelsx-new/social/model-s-hero-social.jpg");
   height: 100vh;
   background-size: cover;
   background-position: center;
