--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,18 @@ body {
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  list-style: none;
+}
+
+#header .nav-links li {
+  margin: 1em;
+}
+
+#header .nav-links li a {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bolder;
+  color: #333;
 }
 
 #showcase {
@@ -82,5 +94,17 @@ button {
   border-radius: 30px;
   border: none;
   margin: 2em;
+  cursor: pointer;
+}
+
+button:hover {
+  color: coral;
+}
+
+.line {
+  height: 5px;
+  width: 20px;
+  margin: 5px;
+  background: #333;
 }
 /*# sourceMappingURL=styles.css.map */
