--- a/css/styles.scss
+++ b/css/styles.scss
@@ -17,6 +17,16 @@ body{
     .nav-links{
         display: flex;
         justify-content: space-around;
+        list-style: none;
+        li{
+            margin: 1em;
+            a{
+                text-decoration: none;
+                text-transform: uppercase;
+                font-weight: bolder;
+                color: #333;
+            }
+        }
     }
 }
 #showcase{
@@ -51,5 +61,16 @@ button{
     border-radius: 30px;
     border: none;
     margin: 2em;
-    
+    cursor: pointer;
+}
+button:hover{
+    color: coral;
+}
+
+
+.line{
+    height: 5px;
+    width: 20px;
+    margin: 5px;
+    background: #333;
 }
